[project]
name = "obohog"
version = "0.1.0"
description = "A queryable history of OBO ontology evolution, derived from git history."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastobo>=0.13",
    "duckdb>=1.1",
    "pyarrow>=17",
    "typer>=0.12",
    "rich>=13",
    "tqdm>=4.66",
    "pydantic>=2.13.4",
]

[project.scripts]
obohog = "obohog.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obohog"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
